  * debian/local/apport-collect: Fix import of launchpadlib's HTTPError.
  * apport/hookutils.py, attach_conffiles(): Ignore empty lines from
    dpkg-query output.
  * general-hooks/ubuntu.py: Strip off '/target' prefix from ExecutablePath
    and InterpreterPath, to correctly process crash reports from the live
    system installer.

  [ Andy Whitcroft ]
  * bin/apportcheckresume: the suspend _and_ hibernate logs are both in
    pm-suspend.log.
  * bin/apportcheckresume: remove redunant check for file before attaching
    stress log.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 30 Apr 2009 13:37:45 +0200

apport (1.1.1-0ubuntu1) karmic; urgency=low

  [ Martin Pitt ]
  * New upstream security update:
    - etc/cron.daily/apport: Only attempt to remove files and symlinks, do not
      descend into subdirectories of /var/crash/. Doing so might be exploited by
      a race condition between find traversing a huge directory tree, changing
      an existing subdir into a symlink to e. g. /etc/, and finally getting
      that piped to rm. This also changes the find command to not use GNU
      extensions.  Thanks to Stephane Chazelas for discovering this!
      (LP: #357024, CVE-2009-1295)
    - Other fixes were already cherrypicked in the previous upload.

  [ Matt Zimmerman ]
  * package-hooks/source_linux.py: Attach info for linux-restricted-modules
    and linux-backports-modules

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 30 Apr 2009 09:08:29 +0200

apport (1.1-0ubuntu1) karmic; urgency=low

  * New upstream release:
    - Drop some remaining distro specific pieces of code from non-backends.
    - Add hookutils methods for attaching relevant packages, greatly improve
      attach_alsa() for sound problem debugging. 
    - Move launchpad crash database implementation from ever-breaking
      python-launchpad-bugs (screenscraping) to launchpadlib (official and
      stable Launchpad API). (LP: #353879)